updated image link in index to match tests

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,6 +1,6 @@
 %h1 Photogram
 -@post.each do |post|
-  =post.image
+  =image_tag post.image.url(:medium)
   =post.caption
 
 = link_to "New post", new_post_path
