--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,5 +2,6 @@
 -@post.each do |post|
   =image_tag post.image.url(:medium)
   =post.caption
+  =link_to (image_tag post.image.url(:medium)), post_path(post)
 
 = link_to "New post", new_post_path
