--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -18,6 +18,7 @@
       hint: "we need your current password to confirm your changes", |
       required: true,                                                |
       input_html: { autocomplete: "current-password" }               |
+    = f.input :user_name, required: true
   .form-actions
     = f.button :submit, "Update"
 %h3 Cancel my account
