--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -13,6 +13,7 @@
     = f.input :password_confirmation,              |
       required: true,                              |
       input_html: { autocomplete: "new-password" } |
+    = f.input :user_name, required: true
   .form-actions
     = f.button :submit, "Sign up"
 = render "devise/shared/links"
